# polars-readlines

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
polars_readlines/: __init__.py
py/: Cargo.toml
src/: lib.rs
