[package]
name = "polars-readlines"
version = "0.1.1"
edition = "2021"
publish = false

[lib]
name = "_polars_readlines"
crate-type = ["cdylib"]

[dependencies]
arrow-buffer = "52.0"
memchr = "2.7"
memmap2 = "0.9.0"
polars = { version = "0.41.0", default-features = false }
polars-arrow = { version = "0.41.0", features = ["arrow_rs"] }
pyo3 = { version = "0.21.0", features = ["extension-module", "abi3-py38", "generate-import-lib"] }
pyo3-polars = "0.15.0"

[profile.release]
opt-level = "s"
strip = "symbols"
lto = "fat"
panic = "abort"
