[package]
name = "polars-readlines"
version = "0.2.1"
edition = "2021"
license = "BSL-1.0"
authors = ["Misaki Kasumi <misakikasumi@outlook.com>"]
repository = "https://github.com/ruihe774/polars-readlines"
description = "A util for fast reading lines of files into Polars"

[dependencies]
arrow-buffer = ">=52"
memchr = "2.7"
memmap2 = "0.9.0"
polars = { version = "0.42.0", default-features = false }
polars-arrow = { version = "0.42.0", features = ["arrow_rs"] }
pyo3 = { version = "0.22.0", features = ["extension-module", "abi3-py38", "generate-import-lib"], optional = true }
pyo3-polars = { version = "0.16.0", optional = true }

[features]
python = ["pyo3", "pyo3-polars"]
