[package]
name = "polars-readlines"
version = "0.2.1"
edition = "2021"
publish = false

[lib]
name = "_polars_readlines"
crate-type = ["cdylib"]

[dependencies]
arrow-buffer = "52.0"
memchr = "2.7"
memmap2 = "0.9.0"
polars = { version = "0.42.0", default-features = false }
polars-arrow = { version = "0.42.0", features = ["arrow_rs"] }
pyo3 = { version = "0.22.0", features = ["extension-module", "abi3-py38", "generate-import-lib"], optional = true }
pyo3-polars = { version = "0.16.0", optional = true }

[features]
python = ["pyo3", "pyo3-polars"]
default = ["python"]

[profile.release]
opt-level = "s"
strip = "symbols"
lto = "fat"
panic = "abort"
